# convex-plasticity

./: .gitignore  LICENSE  README.md  fenicsx_support.py  q_concept_in_dolfinx.py
assembling_strategies/: README.md  assembling_strategies.ipynb  custom_assemble_system.ipynb  custom_assemble_system.py  custom_assemble_system2.py  custom_assemble_system4.py  custom_assembling.md  custom_assembling.py  custom_assembling4.ipynb  custom_elasticity.ipynb  custom_plasticity.ipynb  demo_static-condensation.py  elasticity_case.ipynb
benchmark/: README.md  cvxpy_compilation_benchmark.ipynb  delta_epsilon.npy  high_dim_convex_plasticity.py
convex_optimisation/: README.md  convex_plasticity.ipynb  convex_plasticity_SNES.ipynb  convex_plasticity_SNES2.ipynb  convex_plasticity_SNESQN.ipynb  convex_plasticity_interpolation.ipynb  convex_plasticity_interpolation.py  convex_plasticity_interpolation_Rankine.ipynb  convex_plasticity_interpolation_Rankine_SNES.ipynb  plasticity_analysis.ipynb  return_mapping_cvxpy.ipynb
custom_assembling/: custom_elasticity.ipynb  custom_plasticity.ipynb  custom_plasticity_SNES.ipynb
cvxpygen/: return_mapping_cvxpygen_DP.ipynb
demo/cffi_basics/: CMakeLists.txt  cffi_basics.ipynb
demo/cffi_basics/include/: mylib.h
demo/cffi_basics/src/: mylib.c
elast_interpol/: elast_interpol.ipynb  elast_interpol.py
elasticity/: elasticity.ipynb
external-operators/: README.md  demo_convex_plasticity.py  demo_plasticity_von_mises_pure_ufl.py  parameters_gnu_parallel.py  run_convex_plasticity.py  run_gnu_parallel.sh  utilities.py
optimisation/: README.md  (+15 more)
(+69 files in other folders)
